# pysprings.github.io

./: .gitignore  CNAME  Dockerfile  Gemfile  README.md  _config.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
_includes/: head-custom.html
docs/: about.md  index.md  tutorials.md
docs/assets/stylesheets/: extra.css
docs/paths/: ai-ml.md  getting-started.md  index.md  packaging-distribution.md  security.md  stdlib-deep-dives.md  testing-quality.md
docs/wiki/: index.md
docs/wiki/lightning-talks/: ansi-escape-sequences.md  caching.md  debuggers.md  env-vars.md  fernet-database-encryption.md  fractions.md  getpass-tty.md  index.md  instructor.md  interactive-application.md  jinja2.md  multiprocess.md  pathlib.md  pydantic.md  pyinstaller.md  pyotp-docker.md  random-password.md  robotframework.md  singledispatch.md  wsl-gui.md  zipapp.md
docs/wiki/projects/: badging-system.md  entangled.md  htmx-flask.md  index.md  marketing-bot.md  rlm.md  satellite-radio.md
docs/wiki/series/: dspy-mastery.md  index.md  weekly-challenges.md
overrides/: main.html
pysprings-gradients/: gradients.ipynb  pyproject.toml
toychest/ecs_mob_programming/: README.md  engine.py
toychest/midpoint_displacement/: Midpoint Displacement.ipynb
