[tool.poetry]
name = "another_playground"
version = "0.1.0"
description = ""
authors = ["rfdoell <rfdoell@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6.6"
jupyter = "^1.0"
matplotlib = "^3.1"
numpy = "^1.16"
scikit-learn = "^0.21.2"
scipy = "^1.3"
imageio = "^2.5"
scikit-image = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
